ajouter le num commande annuel

--- a/src/main/resources/mails/invoice-page.html
+++ b/src/main/resources/mails/invoice-page.html
@@ -61,8 +61,9 @@
                 <p th:if="${quotation!=null}">Devis n°<span th:text="${quotation.id}"></span></p>
                 <p th:if="${externalReference!=null}">Référence client : <span th:text="${externalReference}"></span>
                 </p>
-                <p th:if="${invoice.isCommandNumberMandatory}">Commande externe n°<span
-                        th:text="${invoice.commandNumber}"></span></p>
+
+                <p><span
+                        th:text="(${invoice.commandNumber} != null ? 'Votre n° de commande : ' + ${invoice.commandNumber} : '')"></span></p>
                 <p>Paris le <span th:text="${invoiceCreatedDate}"></span></p>
             </td>
             <td></td>
