--- a/src/main/resources/mails/letter-page.html
+++ b/src/main/resources/mails/letter-page.html
@@ -71,7 +71,7 @@
                                         th:if="${letter.invoiceLabelResult.billingLabelCity!=null}"
                                         th:text="${letter.invoiceLabelResult.billingLabelCity.label}"></span><span
                                         th:if="${letter.invoiceLabelResult.billingLabelComplementCedex!=null}"
-                                        th:text="${letter.invoiceLabelResult.billingLabelComplementCedex.label}"></span></span>
+                                        th:text="${letter.invoiceLabelResult.billingLabelComplementCedex}"></span></span>
                             </td>
                         </tr>
                     </table>
