--- a/src/main/resources/mails/invoice-page.html
+++ b/src/main/resources/mails/invoice-page.html
@@ -61,8 +61,10 @@
                 <p th:if="${quotation!=null}">Devis n°<span th:text="${quotation.id}"></span></p>
                 <p th:if="${externalReference!=null}">Référence client : <span th:text="${externalReference}"></span>
                 </p>
-                <p th:if="${invoice.isCommandNumberMandatory}">Commande externe n°<span
-                        th:text="${invoice.commandNumber}"></span></p>
+
+                <p th:if="${invoice.isCommandNumberMandatory}">Votre référence de commande :<span
+                        th:text="${invoice.commandNumber}"></span>
+                </p>
                 <p>Paris le <span th:text="${invoiceCreatedDate}"></span></p>
             </td>
             <td></td>
