--- a/src/main/resources/mails/invoice-page.html
+++ b/src/main/resources/mails/invoice-page.html
@@ -263,6 +263,7 @@
             </td>
         </tr>
     </table>
+    <p style="font-size: 12px;">Echéance de paiement : <span th:text="${invoiceDueDate}"></span></p>
     <p style="font-size: 12px;">Retard de paiement. Maj de 3 fois le taux d’intérêt légal (Application du CC - Article
         L441-6)<br />
         TVA acquittée sur les débits</p>
