--- a/src/main/resources/mails/invoice-page.html
+++ b/src/main/resources/mails/invoice-page.html
@@ -59,10 +59,10 @@
                 <p th:if="${invoice.isCreditNote==false}">Facture n°<span th:text="${invoice.id}"></span></p>
                 <p>Commande n°<span th:text="${customerOrder.id}"></span></p>
                 <p th:if="${quotation!=null}">Devis n°<span th:text="${quotation.id}"></span></p>
-                <p th:if="${externalReference!=null}">Référence client : <span th:text="${externalReference}"></span>
+                <p th:if="${externalReference!=null}">Votre référence : <span th:text="${externalReference}"></span>
                 </p>
 
-                <p th:if="${invoice.isCommandNumberMandatory}">Votre référence de commande :<span
+                <p th:if="${invoice.isCommandNumberMandatory}">Votre référence annuelle :<span
                         th:text="${invoice.commandNumber}"></span>
                 </p>
                 <p>Paris le <span th:text="${invoiceCreatedDate}"></span></p>
