--- a/src/main/resources/mails/letter-page.html
+++ b/src/main/resources/mails/letter-page.html
@@ -101,7 +101,8 @@
                 <td>
                     <p>Bonjour,</p>
                     <p>Nous vous prions de bien vouloir trouver ci-joint les documents concernant l'affaire ci-dessus
-                        référencée.</p>
+                        <br />référencée.
+                    </p>
                     <p>La facture vous parviendra par mail.</p>
                     <p>Vous en souhaitant bonne réception,</p>
                     <p>Nous vous prions d'agréer l'assurance de nos sincères salutations.</p>
