--- a/src/main/resources/mails/invoice-page.html
+++ b/src/main/resources/mails/invoice-page.html
@@ -187,41 +187,45 @@
                         €</td>
                 </tr>
             </th:block>
-            <th:block th:each="debour : ${provision.debours}" th:if="${provision.debours!=null}">
-                <tr th:if="${debour.billingType.isFee==false}">
-                    <td>
-                        <span th:text="${debour.competentAuthority.label}"></span> : <span
-                            th:text="${debour.billingType.label}"></span>
-                    </td>
-                    <td class="td-with-price" style="text-align: right;white-space: nowrap;"
-                        th:if="${debour.billingType.isNonTaxable==false}">
-                        <span
-                            th:text="${#numbers.formatDecimal(debour.debourAmount-(debour.debourAmount/(1f+(vatDebour.rate/100f)))*vatDebour.rate/100f,1,2)}"></span>
-                        €
-                    </td>
-                    <td class="td-with-price" style="text-align: right;white-space: nowrap;"
-                        th:if="${debour.billingType.isNonTaxable==true}">
-                        <span th:text="${#numbers.formatDecimal(debour.debourAmount,1,2)}"></span>
-                        €
-                    </td>
-                </tr>
-                <tr th:if="${debour.billingType.isFee==true}">
-                    <td>
-                        <span th:text="${debour.competentAuthority.label}"></span> : <span
-                            th:text="${debour.billingType.label}"></span>
-                    </td>
-                    <td class="td-with-price" style="text-align: right;white-space: nowrap;"
-                        th:if="${debour.billingType.isNonTaxable==false}">
-                        <span
-                            th:text="${#numbers.formatDecimal(debour.invoicedAmount-(debour.invoicedAmount/(1f+(vatDebour.rate/100f)))*vatDebour.rate/100f,1,2)}"></span>
-                        €
-                    </td>
-                    <td class="td-with-price" style="text-align: right;white-space: nowrap;"
-                        th:if="${debour.billingType.isNonTaxable==true}">
-                        <span th:text="${#numbers.formatDecimal(debour.invoicedAmount,1,2)}"></span>
-                        €
-                    </td>
-                </tr>
+            <th:block th:each="asso : ${assos}">
+                <th:block th:each="provision : ${asso.provisions}">
+                    <th:block th:each="debour : ${provision.debours}" th:if="${provision.debours!=null}">
+                        <tr th:if="${debour.billingType.isFee==false}">
+                            <td>
+                                <span th:text="${debour.competentAuthority.label}"></span> : <span
+                                    th:text="${debour.billingType.label}"></span>
+                            </td>
+                            <td class="td-with-price" style="text-align: right;white-space: nowrap;"
+                                th:if="${debour.billingType.isNonTaxable==false}">
+                                <span
+                                    th:text="${#numbers.formatDecimal(debour.debourAmount-(debour.debourAmount/(1f+(vatDebour.rate/100f)))*vatDebour.rate/100f,1,2)}"></span>
+                                €
+                            </td>
+                            <td class="td-with-price" style="text-align: right;white-space: nowrap;"
+                                th:if="${debour.billingType.isNonTaxable==true}">
+                                <span th:text="${#numbers.formatDecimal(debour.debourAmount,1,2)}"></span>
+                                €
+                            </td>
+                        </tr>
+                        <tr th:if="${debour.billingType.isFee==true}">
+                            <td>
+                                <span th:text="${debour.competentAuthority.label}"></span> : <span
+                                    th:text="${debour.billingType.label}"></span>
+                            </td>
+                            <td class="td-with-price" style="text-align: right;white-space: nowrap;"
+                                th:if="${debour.billingType.isNonTaxable==false}">
+                                <span
+                                    th:text="${#numbers.formatDecimal(debour.invoicedAmount-(debour.invoicedAmount/(1f+(vatDebour.rate/100f)))*vatDebour.rate/100f,1,2)}"></span>
+                                €
+                            </td>
+                            <td class="td-with-price" style="text-align: right;white-space: nowrap;"
+                                th:if="${debour.billingType.isNonTaxable==true}">
+                                <span th:text="${#numbers.formatDecimal(debour.invoicedAmount,1,2)}"></span>
+                                €
+                            </td>
+                        </tr>
+                    </th:block>
+                </th:block>
             </th:block>
         </th:block>
     </table>
