--- a/src/main/resources/mails/billing-closure-receipt.html
+++ b/src/main/resources/mails/billing-closure-receipt.html
@@ -11,7 +11,14 @@
         }
 
         @page {
-            size: a4 portrait;
+            size: A4 portrait;
+
+            @bottom-right {
+                content: counter(page);
+            }
+
+            counter-increment: page;
+            counter-reset: page 1;
         }
 
         .page-break {
@@ -97,9 +104,9 @@
         ci-dessous. <strong>Veuillez indiquer absolument la référence de la commande et / ou de la facture dans le
             libellé de votre virement</strong></p>
     <p style="font-size: 16px;">IBAN / BIC : <span th:text="${ibanJss}"></span> <span th:text="${bicJss}"></span></p>
-    <p style="font-size: 16px; text-align: right;">Dans l’attente,<br />
-        Cordialement.<br />
-        La comptabilité
+    <p style="font-size: 16px; text-align: left;">Dans l’attente,<br />
+        Cordialement.</p>
+    <p style="font-size: 16px; text-align: right;">La comptabilité
     </p>
 </body>
 
