--- a/src/main/resources/mails/invoice-page.html
+++ b/src/main/resources/mails/invoice-page.html
@@ -59,8 +59,8 @@
                 <p th:if="${invoice.isCreditNote==false}">Facture n°<span th:text="${invoice.id}"></span></p>
                 <p>Commande n°<span th:text="${customerOrder.id}"></span></p>
                 <p th:if="${quotation!=null}">Devis n°<span th:text="${quotation.id}"></span></p>
-                <p th:if="${externalReference!=null}">Votre référence : <span th:text="${externalReference}"></span>
-                </p>
+                <p th:if="${externalReference!=null}">Votre référence : <span th:text="${externalReference}"></span></p>
+                <p th:if="${tiersReference!=null}">Référence client : <span th:text="${tiersReference}"></span></p>
 
                 <p th:if="${invoice.isCommandNumberMandatory}">Votre référence annuelle :<span
                         th:text="${invoice.commandNumber}"></span>
