--- a/src/main/resources/mails/invoice-page.html
+++ b/src/main/resources/mails/invoice-page.html
@@ -52,18 +52,19 @@
     <table style="table-layout: fixed;width: 690px;margin-top: 20px;">
         <tr>
             <td style="text-align: left;">
-                <span th:if="${tiersReference!=null}">N° client : <span th:text="${tiersReference}"></span></span>
-                <span th:if="${invoice.isCreditNote!=null} and ${invoice.isCreditNote==true}">Avoir n°<span
-                        th:text="${invoice.id}"></span></span>
-                <span th:if="${invoice.isCreditNote!=null} and ${invoice.isCreditNote==true}">Facture n°<span
-                        th:text="${reverseCreditNote.id}"></span></span>
-                <span th:if="${invoice.isCreditNote==false}">Facture n°<span th:text="${invoice.id}"></span></span>
-                <span>Commande n°<span th:text="${customerOrder.id}"></span></span>
-                <span th:if="${quotation!=null}">Devis n°<span th:text="${quotation.id}"></span></span>
+                <span th:if="${tiersReference!=null}">N° client : <span th:text="${tiersReference}"></span><br /></span>
+                <span>Commande : <span th:text="${customerOrder.id}"></span><br /></span>
+                <span th:if="${invoice.isCreditNote!=null} and ${invoice.isCreditNote==true}">Avoir : <span
+                        th:text="${invoice.id}"></span><br /></span>
+                <span th:if="${invoice.isCreditNote!=null} and ${invoice.isCreditNote==true}">Facture : <span
+                        th:text="${reverseCreditNote.id}"></span><br /></span>
+                <span th:if="${invoice.isCreditNote==false}">Facture : <span
+                        th:text="${invoice.id}"></span><br /></span>
+                <span th:if="${quotation!=null}">Devis : <span th:text="${quotation.id}"></span><br /></span>
                 <span th:if="${externalReference!=null}">Votre référence : <span
-                        th:text="${externalReference}"></span></span>
+                        th:text="${externalReference}"></span><br /></span>
                 <span th:if="${invoice.isCommandNumberMandatory}">Votre référence annuelle :<span
-                        th:text="${invoice.commandNumber}"></span>
+                        th:text="${invoice.commandNumber}"></span><br />
                 </span>
                 <p>Paris le <span th:text="${invoiceCreatedDate}"></span></p>
             </td>
