--- a/src/main/resources/mails/invoice-page.html
+++ b/src/main/resources/mails/invoice-page.html
@@ -69,6 +69,9 @@
                 <span th:if="${responsableOnBilling!=null}">Commande Transmise par :<span
                         th:text="${responsableOnBilling}"></span><br />
                 </span>
+                <span th:if="${invoice.billingLabelIntercommunityVat!=null}">Numéro de TVA :<span
+                        th:text="${invoice.billingLabelIntercommunityVat}"></span><br />
+                </span>
                 <p>Paris le <span th:text="${invoiceCreatedDate}"></span></p>
             </td>
             <td style="width: 100px;"></td>
