--- a/src/main/resources/mails/billing-closure-receipt.html
+++ b/src/main/resources/mails/billing-closure-receipt.html
@@ -49,6 +49,7 @@
     <table style="table-layout: fixed;width: 690px;margin-top: 20px;">
         <tr>
             <td style="text-align: left;">
+                <span th:if="${tiersReference!=null}">N° client : <span th:text="${tiersReference}"></span><br /></span>
                 <p th:if="${commandNumber!=null}">Votre référence annuelle :<span th:text="${commandNumber}"></span>
                 </p>
                 <p>Paris le <span th:text="${currentDate}"></span></p>
