--- a/src/main/resources/mails/invoice-page.html
+++ b/src/main/resources/mails/invoice-page.html
@@ -307,8 +307,12 @@
             <td>
                 Acompte n°<span th:text="${deposit.id}"></span>
             </td>
-            <td class="td-with-price" style="text-align: right;white-space: nowrap;"> - <span
-                    th:text="${#numbers.formatDecimal(deposit.depositAmount,1,2)}"></span>
+            <td th:if="${amountDifference==null}" class="td-with-price" style="text-align: right;white-space: nowrap;">
+                - <span th:text="${#numbers.formatDecimal(deposit.depositAmount,1,2)}"></span>
+                €
+            </td>
+            <td th:if="${amountDifference!=null}" class="td-with-price" style="text-align: right;white-space: nowrap;">
+                - <span th:text="${#numbers.formatDecimal(deposit.depositAmount-amountDifference,1,2)}"></span>
                 €
             </td>
         </tr>
