--- a/src/main/resources/mails/invoice-page.html
+++ b/src/main/resources/mails/invoice-page.html
@@ -307,14 +307,8 @@
             <td>
                 Acompte n°<span th:text="${deposit.id}"></span>
             </td>
-            <td th:if="  and ${hasAppoint==false}  " class="td-with-price"
-                style="text-align: right;white-space: nowrap;">
+            <td class="td-with-price" style="text-align: right;white-space: nowrap;">
                 - <span th:text="${#numbers.formatDecimal(deposit.originPayment.paymentAmount,1,2)}"></span>
-                €
-            </td>
-            <td th:if="  and ${hasAppoint==true}  " class="td-with-price"
-                style="text-align: right;white-space: nowrap;">
-                - <span th:text="${#numbers.formatDecimal(deposit.depositAmount,1,2)}"></span>
                 €
             </td>
         </tr>
@@ -333,6 +327,26 @@
             th:if="${tooMuchPerceived!=null} and ${hasAppoint==false}  and ${invoice.isCreditNote==false} and ${deposits.size()>0}">
             <td>
                 Solde en votre faveur
+            </td>
+            <td class="td-with-price" style="text-align: right;white-space: nowrap;"><span
+                    th:text="${#numbers.formatDecimal(tooMuchPerceived,1,2)}"></span>
+                €
+            </td>
+        </tr>
+        <tr
+            th:if="${remainingToPay>0} and ${hasAppoint==true}  and ${invoice.isCreditNote==false} and ${deposits.size()>0}">
+            <td>
+                Appoint en votre faveur
+            </td>
+            <td class="td-with-price" style="text-align: right;white-space: nowrap;"><span
+                    th:text="${#numbers.formatDecimal(remainingToPay,1,2)}"></span>
+                €
+            </td>
+        </tr>
+        <tr
+            th:if="${tooMuchPerceived!=null} and ${hasAppoint==true}  and ${invoice.isCreditNote==false} and ${deposits.size()>0}">
+            <td>
+                Appoint
             </td>
             <td class="td-with-price" style="text-align: right;white-space: nowrap;"><span
                     th:text="${#numbers.formatDecimal(tooMuchPerceived,1,2)}"></span>
