--- a/src/main/resources/mails/invoice-page.html
+++ b/src/main/resources/mails/invoice-page.html
@@ -66,7 +66,7 @@
                 <span th:if="${invoice.isCommandNumberMandatory}">Votre référence annuelle :<span
                         th:text="${invoice.commandNumber}"></span><br />
                 </span>
-                <span th:if="${responsableOnBilling!=null}">Commande Transmise par :<span
+                <span th:if="${responsableOnBilling!=null}">Commande transmise par :<span
                         th:text="${responsableOnBilling}"></span><br />
                 </span>
                 <span th:if="${invoice.billingLabelIntercommunityVat!=null}">Numéro de TVA :<span
