--- a/src/main/resources/mails/model.html
+++ b/src/main/resources/mails/model.html
@@ -427,7 +427,13 @@
                                                                     style="font-size: 14px; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 16.8px; color: #233d56; line-height: 1.2;">
                                                                     <p th:if="${paymentExplaination!=null}"
                                                                         style="margin-top:20px; font-size: 16px; text-align: center; mso-line-height-alt: 19.2px;">
-                                                                        <span style="font-size:16px; white-space: pre"
+                                                                        <span style="font-size:16px;"
+                                                                            th:if="${quotationValidation!=null}"
+                                                                            th:text="${quotationValidation}"></span><a
+                                                                            th:if="${quotationValidationLink!=null}"
+                                                                            th:href="${quotationValidationLink}"
+                                                                            target="_blank">ici</a><span
+                                                                            style="font-size:16px; white-space: pre"
                                                                             th:text="${paymentExplaination}"></span>
                                                                     </p>
                                                                     <p th:if="${paymentExplaination2!=null}"
